--- a/uno.cabal
+++ b/uno.cabal
@@ -23,6 +23,7 @@ executable uno
 
     -- Modules included in this executable, other than Main.
     other-modules:  Types
+                  , Constants
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
