--- a/uno.cabal
+++ b/uno.cabal
@@ -28,6 +28,7 @@ executable uno
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.16.3.0,
-                      random
+                      random,
+                      lens,
     hs-source-dirs:   app
     default-language: Haskell2010
