--- a/uno.cabal
+++ b/uno.cabal
@@ -24,6 +24,7 @@ executable uno
     -- Modules included in this executable, other than Main.
     other-modules:  Types
                   , Constants
+                  , Game
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
