--- a/uno.cabal
+++ b/uno.cabal
@@ -31,5 +31,6 @@ executable uno
     build-depends:    base ^>=4.16.3.0,
                       random,
                       lens,
+                      mtl,
     hs-source-dirs:   app
     default-language: Haskell2010
