--- a/uno.cabal
+++ b/uno.cabal
@@ -32,5 +32,6 @@ executable uno
                       random,
                       lens,
                       mtl,
+                      ansi-terminal,
     hs-source-dirs:   app
     default-language: Haskell2010
