--- a/uno.cabal
+++ b/uno.cabal
@@ -23,6 +23,7 @@ executable uno
 
     -- Modules included in this executable, other than Main.
     other-modules:  Types
+                  , Util
                   , Constants
                   , Game
 
